tests/ui/codegen/mir/validation/validate_same_block_use.mir
//@compile-flags: --pass dce
//~? ERROR: [fn0] [bb0, inst0] use of ValueId(0) precedes its definition in this acyclic block
// The acyclic function uses v1 before its definition and must be rejected. The
// cyclic function has the same textual ordering but remains valid under MIR's
// deliberately loose SSA rules.
@module ValidateSameBlockUse
fn @acyclic() -> u256 {
  bb0:
    v0 = add v1, 1
    v1 = add 2, 3
    ret v0
}
fn @cyclic(arg0: bool) -> u256 {
  bb0:
    jump bb1
  bb1:
    v0 = add v1, 1
    v1 = add v0, 1
    br arg0, bb1, bb2
  bb2:
    ret v0
}
